# plaintextree

./: Cargo.toml  LICENSE-MIT.txt  README.md
src/: config.rs  item_writer.rs  lib.rs  tree_printer.rs
src/config/: unicode.rs
