[package]
name = "plaintextree"
version = "0.0.0"
authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Draws a simple tree as plain text"
repository = "https://github.com/lo48576/plaintextree"
keywords = ["tree"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[dependencies]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "lo48576/plaintextree" }
